<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.huishan.enjoytravel.ui.home.scanner.ScannerViewModel.ScanType" />

        <variable
            name="viewmodel"
            type="com.huishan.enjoytravel.ui.home.scanner.ScannerViewModel" />

        <variable
            name="bluetoothviewmodel"
            type="com.huishan.enjoytravel.ui.BlueToothViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <cn.bingoogolapple.qrcode.zxing.ZXingView
            android:id="@+id/zxingview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:qrcv_animTime="1000"
            app:qrcv_barCodeTipText="将条码放入框内，即可自动扫描"
            app:qrcv_barcodeRectHeight="120dp"
            app:qrcv_borderColor="@color/white"
            app:qrcv_borderSize="1dp"
            app:qrcv_cornerColor="#1FC76F"
            app:qrcv_cornerDisplayType="center"
            app:qrcv_cornerLength="20dp"
            app:qrcv_cornerSize="3dp"
            app:qrcv_isAutoZoom="true"
            app:qrcv_isBarcode="false"
            app:qrcv_isOnlyDecodeScanBoxArea="false"
            app:qrcv_isScanLineReverse="true"
            app:qrcv_isShowDefaultGridScanLineDrawable="false"
            app:qrcv_isShowDefaultScanLineDrawable="true"
            app:qrcv_isShowLocationPoint="true"
            app:qrcv_isShowTipBackground="true"
            app:qrcv_isShowTipTextAsSingleLine="false"
            app:qrcv_isTipTextBelowRect="false"
            app:qrcv_maskColor="#33FFFFFF"
            app:qrcv_qrCodeTipText="将二维码/条码放入框内，即可自动扫描"
            app:qrcv_rectWidth="200dp"
            app:qrcv_scanLineColor="#1FC76F"
            app:qrcv_scanLineMargin="0dp"
            app:qrcv_scanLineSize="0.5dp"
            app:qrcv_tipTextColor="@android:color/white"
            app:qrcv_tipTextSize="12sp"
            app:qrcv_toolbarHeight="56dp"
            app:qrcv_topOffset="65dp"
            app:qrcv_verticalBias="-1" />

        <View
            android:id="@+id/bottom_bar_bg"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/scanner_radio_group_bg"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/bottom_bar_bg"
            app:layout_constraintLeft_toLeftOf="@id/bottom_bar_bg"
            app:layout_constraintRight_toRightOf="@id/bottom_bar_bg"
            app:layout_constraintTop_toTopOf="@id/bottom_bar_bg">

            <RadioButton
                android:id="@+id/rb_detail"
                style="@style/scanner_radio_style"
                android:background="@drawable/selector_scanner_radio"
                android:onCheckedChanged="@{(cb, isChecked) -> viewmodel.scanTypeChange(cb, isChecked, ScanType.DETAIL, bluetoothviewmodel)}"
                android:text="@string/text_detail" />

            <RadioButton
                android:id="@+id/rb_open"
                style="@style/scanner_radio_style"
                android:background="@drawable/selector_scanner_radio"
                android:checked="true"
                android:onCheckedChanged="@{(cb, isChecked) -> viewmodel.scanTypeChange(cb, isChecked, ScanType.OPEN, bluetoothviewmodel)}"
                android:text="@string/text_unlock" />

            <RadioButton
                android:id="@+id/rb_close"
                style="@style/scanner_radio_style"
                android:background="@drawable/selector_scanner_radio"
                android:onCheckedChanged="@{(cb, isChecked) -> viewmodel.scanTypeChange(cb, isChecked, ScanType.LOCK, bluetoothviewmodel)}"
                android:text="@string/text_lock" />
        </RadioGroup>

        <View
            android:id="@+id/center_line"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:clickable="false"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/cb_flash"
            style="@style/flash_checkbox"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="70dp"
            android:onCheckedChanged="@{(cb, isChecked) -> viewmodel.flashChange(isChecked)}"
            app:layout_constraintBottom_toTopOf="@id/bottom_bar_bg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/center_line" />

        <ImageView
            android:id="@+id/iv_editor"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:onClick="@{(view) -> viewmodel.gotoEditor(view)}"
            android:src="@drawable/editor"
            app:layout_constraintLeft_toLeftOf="@id/center_line"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/cb_flash" />

        <TextView
            android:id="@+id/tv_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/bottom_bar_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_editor" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
