<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.huishan.enjoytravel.ui.home.bikelist.BikeListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_gray_color"
        android:focusable="true">

        <com.huishan.enjoytravel.widget.StatusBarView
            android:id="@+id/status_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            layout="@layout/title_layout"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status_bar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_head"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_title">

            <EditText
                android:id="@+id/et_bike_number"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/default_horizontal_offset"
                android:layout_marginTop="20dp"
                android:afterTextChanged="@{(s) -> viewmodel.onBikeNumberChange(s)}"
                android:background="@drawable/shape_rectangle_gray_content_radius_20dp"
                android:gravity="center_vertical"
                android:hint="@string/hint_input_bike_number"
                android:paddingStart="45dp"
                android:paddingEnd="10dp"
                android:textColor="@color/default_black_color"
                android:textColorHint="#8F8F8F"
                android:textSize="14sp"
                app:layout_constraintHorizontal_weight="0.65"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_bike_total"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_search"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="@dimen/default_horizontal_offset"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="@id/et_bike_number"
                app:layout_constraintLeft_toLeftOf="@id/et_bike_number"
                app:layout_constraintTop_toTopOf="@id/et_bike_number" />

            <TextView
                android:id="@+id/tv_bike_total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_horizontal_offset"
                android:layout_marginEnd="@dimen/default_horizontal_offset"
                android:text="@{@string/value_total_bike_number(viewmodel.totalNumber)}"
                android:textColor="@color/default_black_color"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/et_bike_number"
                app:layout_constraintHorizontal_weight="0.35"
                app:layout_constraintLeft_toRightOf="@id/et_bike_number"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/et_bike_number" />

            <TextView
                android:id="@+id/tv_all_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:onClick="@{() -> viewmodel.onAllStatusClick()}"
                android:text="@string/text_all_status"
                android:textColor="@color/default_black_color"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/et_bike_number"
                app:layout_constraintTop_toBottomOf="@id/et_bike_number" />

            <ImageView
                android:id="@+id/iv_all_status"
                android:layout_width="12dp"
                android:layout_height="7.5dp"
                android:layout_marginStart="3dp"
                android:onClick="@{() -> viewmodel.onAllStatusClick()}"
                android:src="@{viewmodel.allStatusType ?@drawable/ic_gray_triangle_up :@drawable/ic_gray_triangle_down}"
                app:layout_constraintBottom_toBottomOf="@id/tv_all_status"
                app:layout_constraintLeft_toRightOf="@id/tv_all_status"
                app:layout_constraintTop_toTopOf="@id/tv_all_status" />

            <TextView
                android:id="@+id/tv_ticket_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_horizontal_offset"
                android:onClick="@{() -> viewmodel.onAllBatteryPowerClick()}"
                android:text="@string/text_all_battery_power"
                android:textColor="@color/default_black_color"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_all_status"
                app:layout_constraintLeft_toRightOf="@id/iv_all_status"
                app:layout_constraintTop_toTopOf="@id/tv_all_status" />

            <ImageView
                android:id="@+id/iv_battery_power"
                android:layout_width="12dp"
                android:layout_height="7.5dp"
                android:layout_marginStart="3dp"
                android:onClick="@{() -> viewmodel.onAllBatteryPowerClick()}"
                android:src="@{viewmodel.allBatteryPowerType ?@drawable/ic_gray_triangle_up :@drawable/ic_gray_triangle_down}"
                app:layout_constraintBottom_toBottomOf="@id/tv_ticket_status"
                app:layout_constraintLeft_toRightOf="@id/tv_ticket_status"
                app:layout_constraintTop_toTopOf="@id/tv_ticket_status" />

            <TextView
                android:id="@+id/tv_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_horizontal_offset"
                android:onClick="@{() -> viewmodel.onDistanceFilter()}"
                android:text="@string/text_distance"
                android:textColor="@color/default_black_color"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_ticket_status"
                app:layout_constraintLeft_toRightOf="@id/iv_battery_power"
                app:layout_constraintTop_toTopOf="@id/tv_ticket_status" />

            <ImageView
                android:id="@+id/iv_distance"
                android:layout_width="9dp"
                android:layout_height="13dp"
                android:layout_marginStart="3dp"
                android:onClick="@{() -> viewmodel.onDistanceFilter()}"
                android:src="@drawable/ic_filter_none"
                app:layout_constraintBottom_toBottomOf="@id/tv_start_date"
                app:layout_constraintLeft_toRightOf="@id/tv_start_date"
                app:layout_constraintTop_toTopOf="@id/tv_start_date" />

            <TextView
                android:id="@+id/tv_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_horizontal_offset"
                android:onClick="@{() -> viewmodel.onBatteryFilter()}"
                android:text="@string/text_battery_power"
                android:textColor="@color/default_black_color"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_start_date"
                app:layout_constraintLeft_toRightOf="@id/iv_distance"
                app:layout_constraintTop_toTopOf="@id/tv_start_date" />

            <ImageView
                android:id="@+id/iv_power"
                android:layout_width="9dp"
                android:layout_height="13dp"
                android:layout_marginStart="3dp"
                android:onClick="@{() -> viewmodel.onBatteryFilter()}"
                android:src="@drawable/ic_filter_none"
                app:layout_constraintBottom_toBottomOf="@id/tv_end_date"
                app:layout_constraintLeft_toRightOf="@id/tv_end_date"
                app:layout_constraintTop_toTopOf="@id/tv_end_date" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/default_horizontal_offset"
            android:layout_marginTop="@dimen/default_vertical_offset"
            android:layout_marginEnd="@dimen/default_horizontal_offset"
            android:layout_marginBottom="@dimen/default_vertical_offset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_head" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_type_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/default_horizontal_offset"
            android:paddingTop="@dimen/default_vertical_offset"
            android:paddingEnd="@dimen/default_horizontal_offset"
            android:paddingBottom="@dimen/default_vertical_offset"
            android:background="@color/white"
            android:visibility="@{viewmodel.typeContentVisible ? View.VISIBLE : View.GONE}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_head" />

        <View
            android:id="@+id/mask"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#55000000"
            android:onClick="@{() -> viewmodel.onMaskOnClick()}"
            android:visibility="@{viewmodel.maskVisible ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_type_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
